# Remenny_Laby_PMI_IIAD

./: README.md
Remenny_Laby/Laba_1/: main.cpp
Remenny_Laby/Laba_10/: CMakeLists.txt  main.cpp
Remenny_Laby/Laba_10/func/: func.cpp  func.hpp
Remenny_Laby/Laba_11/: CMakeLists.txt  main.cpp
Remenny_Laby/Laba_11/func/: func.cpp  func.hpp
Remenny_Laby/Laba_12/: main.cpp
Remenny_Laby/Laba_12/func/: func.cpp  func.hpp
Remenny_Laby/Laba_13/: main.cpp
Remenny_Laby/Laba_14/: main.cpp
Remenny_Laby/Laba_15/: CMakeLists.txt  main15.cpp
Remenny_Laby/Laba_16/: CMakeLists.txt  main16.cpp
Remenny_Laby/Laba_17/: CMakeLists.txt  main17.cpp
Remenny_Laby/Laba_18/: CMakeLists.txt  main18.cpp
Remenny_Laby/Laba_19/: CMakeLists.txt  main19.cpp
Remenny_Laby/Laba_2/: main.cpp
Remenny_Laby/Laba_3/: main.cpp
Remenny_Laby/Laba_4/: main.cpp
Remenny_Laby/Laba_5/: main.cpp
Remenny_Laby/Laba_6/: main.cpp
Remenny_Laby/Laba_7/: main.cpp
Remenny_Laby/Laba_7/func/: func.cpp  func.hpp
Remenny_Laby/Laba_9/: CMakeLists.txt  main.cpp
